--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,12 +1,28 @@
 .footer {
-  width: 100%;
-  height: 80px;
-  border-top: 1px solid #eaeaea;
+	width: 100%;
+	border-top: 1px solid #eaeaea;
 }
 
 .footerContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 30px;
+}
+
+.footerSocial {
+	display: flex;
+	justify-content: center;
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+.footerSocial svg {
+	width: 20px;
+	height: 20px;
+	margin-right: 10px;
+}
+.footerPolicy {
+	display: flex;
+	justify-content: center;
+	margin-bottom: 30px;
 }
