--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,43 +1,62 @@
 .homeContainer {
-  display: flex;
-  justify-content: center;
+	display: flex;
+	justify-content: center;
+	max-width: 100%;
+	margin-top: 5em;
 }
-
+.events {
+	text-align: center;
+	margin: 2em 0;
+}
 .grid {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  width: 100%;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	align-items: flex-start;
+	width: 100%;
 }
 
 .card {
-  margin: 1rem;
-  flex-basis: 45%;
-  max-width: 20rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+	margin: 1rem;
+	flex-basis: 45%;
+	max-width: 25rem;
+	text-align: left;
+	color: inherit;
+	text-decoration: none;
+	transition: color 0.15s ease, border-color 0.15s ease;
 }
-
+.card span {
+	display: block;
+	position: relative;
+	background-color: #ffeb3b;
+	text-align: center;
+	margin: -20px 20px;
+	padding: 10px 0;
+	font-weight: bold;
+	letter-spacing: 2px;
+}
 .card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+	margin: 0 0 1rem 0;
+	font-size: 1.5rem;
 }
 
 .card p {
-  font-size: 1rem;
-  line-height: 1.5;
-  margin: .8em 0;
+	font-size: 0.8rem;
+	line-height: 1.5;
+	margin: 0.8em 0;
 }
-
+.price {
+	font-weight: bold;
+}
+.info {
+	background-color: #fff;
+	margin: -60px 20px 0 0;
+	padding: 20px 10px;
+	position: relative;
+}
 @media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+	.grid {
+		width: 100%;
+		flex-direction: column;
+	}
 }
