--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,41 +1,103 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	overflow-x: hidden;
+	padding: 0;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 img {
-  max-width: 100%;
+	max-width: 100%;
 }
 
+button1 {
+	color: white;
+	font-size: 1em;
+	font-weight: bold;
+	background-color: #0070f3;
+	padding: 0.4em 0.6em;
+	border: none;
+	border-radius: 0.4em;
+	cursor: pointer;
+}
 button {
-  color: white;
-  font-size: 1em;
-  font-weight: bold;
-  background-color: #0070f3;
-  padding: .4em .6em;
-  border: none;
-  border-radius: .4em;
-  cursor: pointer;
+	font-size: 14px;
+	font-weight: bold;
+	border-radius: 4px;
+	padding: 6px 20px;
+	border: none;
+	background-color: #9094ff;
+	color: white;
+	position: relative;
+	z-index: 999;
+}
+button::hover {
+	transition: 0.2s all;
+}
+button:hover:before {
+	transform: scale(1.15, 1.4);
+}
+button::before {
+	content: " ";
+	position: absolute;
+	background-color: #9094ff;
+	top: 0;
+	left: 0;
+	border-radius: 4px;
+	width: 100%;
+	height: 100%;
+	opacity: 0.4;
+	z-index: -1;
+	transform: scale(1);
+	transition: all 0.3s cubic-bezier(0.16, 0.8, 0.66, 1.54);
+}
+.sr-only {
+	display: block;
+	overflow: hidden;
+	position: absolute;
+	top: -9999px;
+	left: -9999px;
+	width: 0;
+	height: 0;
+}
+.swiper-slide::after {
+	//position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 26px;
+	content: "";
+	background-color: #ffe000;
+	opacity: 0.8;
+}
+.swiper-container {
+	width: 100%;
+	padding-top: 1em;
+	background-color: #ffeb3b;
+}
+.swiper-wrapper {
+	width: 50%;
 }
 
-.sr-only {
-  display: block;
-  overflow: hidden;
-  position: absolute;
-  top: -9999px;
-  left: -9999px;
-  width: 0;
-  height: 0;
+.swiper-slide {
+	text-align: center;
+	width: auto;
+}
+.slide-image {
+	height: 450px;
+	width: auto;
+	box-shadow: #3f3f3f -15px 45px 65px -25px;
+}
+div#__next {
+	overflow: hidden;
 }
