--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -1,5 +1,10 @@
 .intro {
-	background-color: #ffeb3b;
+	background: rgb(255, 250, 104);
+	background: radial-gradient(
+		circle,
+		rgba(255, 250, 104, 1) 20%,
+		rgba(255, 235, 59, 1) 100%
+	);
 	background-size: cover;
 	background-position-x: right;
 	background-position-y: top;
@@ -7,12 +12,26 @@
 	padding: 5em 0;
 	text-align: center;
 	margin-top: -26px;
+	position: relative;
+}
+.intro::after {
+	background-image: url("../../../public/images/dandelion.png");
+	position: absolute;
+	top: -0%;
+	left: -0%;
+	right: -0%;
+	bottom: 0%;
+	content: "";
+	z-index: 1;
+	background-size: cover;
+	background-position-x: right;
+	background-position-y: top;
+	background-repeat: no-repeat;
 }
 .intro h2,
 .intro p {
 	width: 50%;
 	margin: 0 auto;
-	background: #ffeb3b;
 }
 .intro h2 {
 	font-size: 1.7rem;
